# xacro_cpp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  package.xml
include/xacro_cpp/: processor.hpp  tinyexpr.h
src/: expr.cpp  main.cpp  processor.cpp  processor_internal.hpp  tinyexpr.c  yaml.cpp
test/: test_xacro_parsing.cpp
test/test_files/: basic_operations.xacro  conditional.xacro  conditional_else.xacro  div_by_zero.xacro  duplicate_property.xacro  include_failure.xacro  including_nested.xacro  including_other.xacro  list_params.xacro  macros_advanced.xacro  macros_advanced_expected.xml  macros_block.xacro  parenthesis.xacro  precedence_order.xacro  properties.xacro  settings.yaml  syntax_error.xacro  test_block_double_star_insert.xacro  test_boolean_if_statement.xacro  test_broken_include_error_reporting.xacro  test_call_missing_macro_attr.xacro  test_call_simple.xacro  test_conditional_include_based_on_arg.xacro  test_conditional_include_based_on_macro_param.xacro  test_conditional_include_params.xacro  test_consecutive_if.xacro  test_consider_non_elements_block.xacro  test_consider_non_elements_if.xacro  test_default_arg.xacro  test_default_arg_empty.xacro  test_default_arg_missing.xacro  test_default_param.xacro  test_default_param_override.xacro  test_default_property.xacro  test_default_property_complex.xacro  test_default_property_complex_2.xacro  test_default_property_complex_2_include.xacro  test_default_property_complex_include.xacro  test_default_property_expressions.xacro  test_double_underscore_property_name.xacro  (+75 more)
test/test_files/subdir/: include-recursive.xacro
