<?xml version="1.0"?>
<package format="3">
  <name>xacro_cpp</name>
  <version>0.1.0</version>
  <description>Minimal pure C++ implementation of core xacro features (no Python).</description>
  <maintainer email="unknown@example.com">Unknown</maintainer>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>tinyxml2</build_depend>
  <exec_depend>tinyxml2</exec_depend>
  <build_depend>ament_index_cpp</build_depend>
  <exec_depend>ament_index_cpp</exec_depend>
</package>
