<?xml version="1.0"?>
<package format="3">
  <name>xacro_cpp</name>
  <version>0.1.0</version>
  <description>Minimal pure C++ implementation of core xacro features</description>
  <maintainer email="marton@nowtech.hu">nilseuropa</maintainer>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>tinyxml2</build_depend>
  <build_export_depend>tinyxml2</build_export_depend>
  <exec_depend>tinyxml2</exec_depend>

  <depend>yaml_cpp_vendor</depend>
  <depend>yaml-cpp</depend>

  <build_depend>ament_index_cpp</build_depend>
  <build_export_depend>ament_index_cpp</build_export_depend>
  <exec_depend>ament_index_cpp</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
